<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">音视频SDK多人Demo</string>
    <string name="video_closemic">关闭麦克风</string>
    <string name="video_handfree">免提</string>
    <string name="video_camera_txt">摄像头</string>
    <string name="video_call_phonenum">拨打手机</string>
    <string name="video_switch_camera">切换摄像头</string>
    <string name="video_close_video">关闭画面</string>
    <string name="audio_open_camera_acc_txt">打开我的摄像头</string>
    <string name="audio_close_camera_acc_txt">关闭我的摄像头</string>
    <string name="video_close_external_acc_txt">关闭外部视频输入</string>
    <string name="video_open_external_acc_txt">打开外部视频输入</string>
    <string name="start_recording_video">录制开始</string>
    <string name="stop_recording_video">录制停止</string>
    <string name="audio_close_mic_acc_txt">关闭麦克风</string>
    <string name="audio_disable_camera_acc_txt">发起通话时暂不能打开摄像头</string>
    <string name="audio_switch_to_headset_mode_acc_txt">关闭免提</string>
    <string name="audio_switch_to_speaker_mode_acc_txt">打开免提</string>
    <string name="gaudio_close_mic_acc_txt">关闭麦克风</string>
    <string name="gaudio_open_mic_acc_txt">打开麦克风</string>
    <string name="gaudio_switch_camera_front_acc_txt">换用后置摄像头</string>
    <string name="gaudio_switch_camera_back_acc_txt">换用前置摄像头</string>
    <string name="gaudio_hangup_acc_txt">退出多人通话</string>
    <string name="gvideo_request_video_acc_txt">该好友正在视频，按下可观看该好友的视频</string>
    <string name="gvideo_request_screen_acc_txt">该好友正在屏幕分享，按下可观看该好友的屏幕分享</string>
    <string name="gvideo_play_video_acc_txt">正在播放该好友的视频</string>
    <string name="gvideo_play_screen_acc_txt">正在播放该好友的屏幕分享</string>
    <string name="gvideo_speaking_acc_txt">该好友正在语音</string>
    <string name="video_close_remote_video_acc_txt">关闭画面</string>
    <string name="qav_gaudio_waiting_text">等待大家加入</string>
    <string name="login_prefix">选择登录的测试号：</string>
    <string name="empty_text">无</string>
    <string name="room_prefix">编辑讨论组号</string>
    <string name="default_room">200011</string>
    <string name="create_room">创建房间</string>
    <string name="at_login">登录中</string>
    <string name="login_failed">登录失败</string>
    <string name="at_logout">登出中</string>
    <string name="at_create_room">创建房间中</string>
    <string name="create_room_failed">创建房间失败</string>
    <string name="at_close_room">关闭房间中</string>
    <string name="close_room_failed">关闭房间失败</string>
    <string name="login">选择测试号登录</string>
    <string name="menu">菜单</string>
    <string name="handfree_summary">开关扬声器</string>
    <string name="select">选择音频模式</string>
    <string name="testenv">测试环境被打开</string>
    <string name="notestenv">测试环境被关闭</string>
    <string name="mic">麦克风</string>
    <string name="mic_summary">开关麦克风</string>
    <string name="camera_summary">开关摄像头</string>
	<string name="interface_initialization">界面初始化中</string>
	<string name="me">我</string>
	<string name="avendpoint_is_null">该成员已退出</string>
	<string name="error_code_prefix">错误码：</string>
	<string name="action_add">添加一条测试号</string>
	<string name="action_input_set">输入流配置</string>
	<string name="action_output_set">输出流配置</string>
	<string name="qq_prefix">昵称：</string>
	<string name="openid_prefix">identifier：</string>
	<string name="input_file_path">输入流路径</string>
	<string name="output_file_path">输出流文件夹路径</string>
	<string name="openkey_prefix">usersig：</string>
	<string name="yuv_wide">视频宽</string>
	<string name="yuv_high">视频高</string>
	<string name="at_on_camera">打开摄像头中</string>
	<string name="on_camera_failed">打开摄像头失败</string>
	<string name="at_off_camera">关闭摄像头中</string>
	<string name="off_camera_failed">关闭摄像头失败</string>
	<string name="not_default_appid">不是默认的测试APPID/ACCTYPE</string>
	<string name="at_on_external_capture">打开外部视频输入中</string>
	<string name="on_external_capture_failed">打开外部视频输入失败</string>
	<string name="at_off_external_capture">关闭外部视频输入中</string>
	<string name="off_external_capture_failed">关闭外部视频输入失败</string>
	
	<string name="at_switch_front_camera">换用前置摄像头中</string>
	<string name="switch_front_camera_failed">换用前置摄像头失败</string>
	<string name="at_switch_back_camera">换用后置摄像头中</string>
	<string name="switch_back_camera_failed">换用后置摄像头失败</string>
	
	<string name="notify_network_error">网络无法联通，请检查网络</string>	
    <string name="notify_no_network">网络无连接，请检查网络</string>  
    
    <string name="uid_add">修改appid和uid</string>    
    <string name="appid_prefix">appid：</string>   
    <string name="uid_prefix">uid：</string>    
    <string name="notify_appid_empty">appid不能为空</string>  
    <string name="notify_uid_empty">uid不能为空</string>    
    <string name="tips_show">打开tips</string>     
    <string name="tips_close">关闭tips</string>  
    <string name="room_role_text">流控角色名</string> 
    <string name="room_role_default">123</string> 
     <string name="isAuthAudioSend">音频上行</string> 
    <string name="isAuthAudioRev">音频下行</string> 
    <string name="isAuthVideoSend">视频主路上行</string> 
    <string name="isAuthVideoRev">视频主路下行</string> 
    <string name="isSupportMultiVideo">是否支持多路视频输出</string>
    <string name="isOpenBackCameraFirst">是否先打开后置摄像头</string>    
</resources>